SERVER-80360 Fix query stats in list serialization perf regression